# CS_Contest

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
component/: clicklabel.cpp  clicklabel.h  clickoptions.cpp  clickoptions.h  collectbutton.cpp  collectbutton.h  excelReader.cpp  excelReader.h  settingFile.cpp  settingFile.h  settingFile.hpp  switchquestion.cpp  switchquestion.h
doc/: 2022.xls  2022公开题库.xls  2023.xls
include/: CS_Contest.h  constants.h  widgetOfAbout.h  widgetOfMore.h  widgetOfSearch.h
resource/: res.qrc
resource/doc/: 2022.csv  2023.csv
src/: CS_Contest.cpp  CS_Contest.h  CS_Contest.ui  constants.h  excelReader.cpp  excelReader.h  main.cpp  questionBankReader.hpp  widgetOfAbout.cpp  widgetOfAbout.h  widgetOfMore.cpp  widgetOfMore.h  widgetOfSearch.cpp  widgetOfSearch.h  widgetOfStart.cpp  widgetOfStart.h
src/ui/: CS_Contest.ui  widgetOfAbout.ui  widgetOfStart.ui
ui/: CS_Contest.ui  widgetOfAbout.ui  widgetOfMore.ui  widgetOfSearch.ui  widgetOfStart.ui
